<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentMyDaangn">

    <include
        android:id="@+id/toolBar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_underline"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profileImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:src="@drawable/profile"
                        app:layout_constraintEnd_toStartOf="@+id/userName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_username"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/profileImage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/myTownInfoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_myTown"
                        android:textSize="12dp"
                        app:layout_constraintStart_toEndOf="@id/profileImage"
                        app:layout_constraintTop_toBottomOf="@id/userName" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/showProfileBtn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/str_show_profile_btn"
                    android:textColor="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/salesIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/round_button"
                        android:padding="13dp"
                        android:src="@drawable/ic_baseline_list_24"
                        app:layout_constraintBottom_toTopOf="@id/salesDetailText"
                        app:layout_constraintEnd_toStartOf="@+id/phurchaseIcon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:tint="#F44336" />

                    <ImageView
                        android:id="@+id/phurchaseIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/round_button"
                        android:padding="13dp"
                        android:src="@drawable/ic_baseline_shopping_bag_24"
                        app:layout_constraintBottom_toTopOf="@id/phurchaseDetailText"
                        app:layout_constraintEnd_toStartOf="@id/wishListIcon"
                        app:layout_constraintStart_toEndOf="@id/salesIcon"
                        app:tint="#FF3D00" />

                    <ImageView
                        android:id="@+id/wishListIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/round_button"
                        android:padding="13dp"
                        android:src="@drawable/ic_baseline_favorite_border_24"
                        app:layout_constraintBottom_toTopOf="@id/wishListIconText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/phurchaseIcon"
                        app:tint="#FF3D00" />

                    <TextView
                        android:id="@+id/salesDetailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/str_sales_detail"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toEndOf="@id/salesIcon"
                        app:layout_constraintStart_toStartOf="@id/salesIcon"
                        app:layout_constraintTop_toBottomOf="@id/salesIcon" />

                    <TextView
                        android:id="@+id/phurchaseDetailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/str_phurchase_detail"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toEndOf="@id/phurchaseIcon"
                        app:layout_constraintStart_toStartOf="@id/phurchaseIcon"
                        app:layout_constraintTop_toBottomOf="@id/phurchaseIcon" />

                    <TextView
                        android:id="@+id/wishListIconText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="관심목록"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toEndOf="@id/wishListIcon"
                        app:layout_constraintStart_toStartOf="@id/wishListIcon"
                        app:layout_constraintTop_toBottomOf="@id/wishListIcon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_underline"
                android:elevation="8dp"
                android:orientation="vertical"
                android:paddingTop="13dp"
                android:paddingBottom="13dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_where_to_vote_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_my_town_setting"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_gps_not_fixed_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_authorize_town"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_local_offer_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_notification_keyword"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_widgets_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_show_all"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_underline"
                android:orientation="vertical"
                android:paddingTop="13dp"
                android:paddingBottom="13dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_border_color_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_write_town_board"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_textsms_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_town_comments"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_star_border_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_town_theme_list"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_underline"
                android:orientation="vertical"
                android:paddingTop="13dp"
                android:paddingBottom="13dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_business_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_business_profile"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_baseline_volume_down_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/str_regional_advertising"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>